@startuml ViewPrClassDiagram
abstract class Command {
    + execute(Storage, WorkoutList, Ui, UserProfile): void
    + isExit(): boolean
}

class ViewPrCommand {
    - exerciseId: String
    + execute(Storage, WorkoutList, Ui, UserProfile): void
}

class WorkoutList {
    + getSize(): int
    + getWorkoutAtIndex(int): Workout
}

class StrengthWorkout {
    + getWeight(): double
}

class RunWorkout {
    + getDistance(): double
}

class Ui {
    + showPr(Workout): void
    + showMessage(String): void
}

Command <|-- ViewPrCommand
ViewPrCommand --> WorkoutList : reads >
ViewPrCommand --> Ui : uses >
WorkoutList --> StrengthWorkout : contains >
WorkoutList --> RunWorkout : contains >
@enduml